--- a/validate-client/package.json
+++ b/validate-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello_world",
+  "name": "tech_challenge_g31_lambda",
   "version": "1.0.0",
   "description": "hello world sample for NodeJS",
   "main": "app.js",
