--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           environment:
             DB_USER: ${{ secrets.DB_USER }}
             DB_HOST: ${{ secrets.DB_HOST }}
-            DB_DATABASE: ${{ secrets.DATABASE }}
+            DB_DATABASE: ${{ secrets.DB_DATABASE }}
             DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
             DB_PORT: ${{ secrets.DB_PORT }}
       # Build inside Docker containers
